# jbig2enc-rs

./: .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md
.github/workflows/: cd.yml  ci.yml  copilot-review.yml
docs/plans/: 000_migration_plan.md  1000_crates_io_publish.md  100_arithmetic_coder.md  1100_ci_cd_pipeline.md  200_wire_format.md  300_generic_region.md  400_symbol_dictionary.md  500_text_region.md  600_comparator.md  700_multipage_encoder.md  800_cli_tool.md  900_verbose_segment.md  901_fix_encode_bitimage_context.md  zippy-gliding-mochi.md
src/: cli.rs  error.rs  lib.rs  main.rs  pipeline.rs
src/arith/: encoder.rs  image.rs  int_encode.rs  mod.rs  state_table.rs
src/comparator/: mod.rs
src/encoder/: context.rs  generic.rs  mod.rs
src/symbol/: dictionary.rs  mod.rs  text_region.rs
src/wire/: constants.rs  mod.rs  segment.rs  structs.rs
tests/: arith_bitimage.rs  arith_encoder_core.rs  arith_int_encode.rs  auto_threshold.rs  cli.rs  comparator.rs  encoder_generic.rs  multipage.rs  symbol_dictionary.rs  text_region.rs  wire_segment.rs  wire_structs.rs
